ensure "make install" on windows also installs development header files
Differential Revision: https://phabricator.kde.org/D15182

--- a/src/lib/marble/CMakeLists.txt
+++ b/src/lib/marble/CMakeLists.txt
@@ -457,7 +457,7 @@ endif()
 
 ########### install headers & cmake config files ###############
 
-if (WIN32 OR APPLE)
+if (APPLE)
     # TODO: find how to install & deploy library, headers and config files as bundle for development
     return()
 endif()
@@ -655,11 +655,13 @@ install(FILES
     DESTINATION ${MARBLE_INSTALL_CMAKECONFIGDIR}
 )
 
-install(
-    EXPORT MarbleTargets
-    FILE ${MARBLE_CMAKECONFIGNAME}Targets.cmake
-    DESTINATION ${MARBLE_INSTALL_CMAKECONFIGDIR}
-)
+if (UNIX)
+    install(
+        EXPORT MarbleTargets
+        FILE ${MARBLE_CMAKECONFIGNAME}Targets.cmake
+        DESTINATION ${MARBLE_INSTALL_CMAKECONFIGDIR}
+    )
+endif()
 
 
 ########### Qt Pri file ###############
