--- a/src/lib/marble/MarbleConfig.cmake.in
+++ b/src/lib/marble/MarbleConfig.cmake.in
@@ -8,13 +8,15 @@ if (_CMakeFindDependencyMacro_FOUND)
     find_dependency(Qt5Xml @REQUIRED_QT_VERSION@)
     find_dependency(Qt5Widgets @REQUIRED_QT_VERSION@)
     if (NOT MARBLE_NO_WEBKITWIDGETS)
-        find_dependency(Qt5WebKitWidgets @REQUIRED_QT_VERSION@)
+        find_dependency(Qt5WebEngine @REQUIRED_QT_VERSION@)
+        find_dependency(Qt5WebEngineWidgets @REQUIRED_QT_VERSION@)
     endif()
 else()
     find_package(Qt5Xml REQUIRED)
     find_package(Qt5Widgets REQUIRED)
     if (NOT MARBLE_NO_WEBKITWIDGETS)
-        find_package(Qt5WebKitWidgets REQUIRED)
+        find_package(Qt5WebEngine REQUIRED)
+        find_package(Qt5WebEngineWidgets REQUIRED)
     endif()
 endif()
 
