Fix qt_Marble.pri file to update to port to QtWebEngine

--- a/src/lib/marble/CMakeLists.txt
+++ b/src/lib/marble/CMakeLists.txt
@@ -688,7 +688,7 @@ endif()
 
 set(PRI_DEPS "xml gui widgets network")
 if (NOT MARBLE_NO_WEBKITWIDGETS)
-    set(PRI_DEPS "${PRI_DEPS} webkitwidgets")
+    set(PRI_DEPS "${PRI_DEPS} webenginewidgets")
 endif()
 
 file(GENERATE
