Include a comment to the desktop file
Summary:
Otherwise the appstream file won't have a summary and appstream complains.

CCBUG: 400431

Reviewers: #marble, kossebau, sanjibanb

Reviewed By: sanjibanb

Subscribers: marble-devel, kde-edu

Tags: #marble, #kde_edu

Differential Revision: https://phabricator.kde.org/D16866

--- a/src/plasma/wallpapers/worldmap/metadata.desktop
+++ b/src/plasma/wallpapers/worldmap/metadata.desktop
@@ -26,6 +26,7 @@ Name[uk]=Карта світу
 Name[x-test]=xxWorld Mapxx
 Name[zh_CN]=世界地图
 Name[zh_TW]=世界地圖
+Comment=Our beautiful globe as your wallpaper
 Type=Service
 Icon=marble
 
