GIT_SILENT: Use KF5_MIN_VERSION as KF5_VERSION will be overridden by first KF5 find_package version as Found by Andreas Sturmlechner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -299,7 +299,7 @@ endif(WIN32)
 set(REQUIRED_ECM_VERSION 1.7.0)
 set(KDE_INSTALL_DIRS_NO_DEPRECATED TRUE)
 set(KDE_SKIP_UNINSTALL_TARGET ON CACHE BOOL "KDE uninstall target must be disabled")
-set(REQUIRED_KF5_VERSION 5.7.0)
+set(REQUIRED_KF5_MIN_VERSION 5.7.0)
 
 
 ####################################################
