Fix Android build without WebEngine
Summary: Should hopefully fix the build on binary factory.

Reviewers: apol

Reviewed By: apol

Subscribers: marble-devel, kde-edu

Tags: #marble, #kde_edu

Differential Revision: https://phabricator.kde.org/D19228

--- a/src/apps/behaim/CMakeLists.txt
+++ b/src/apps/behaim/CMakeLists.txt
@@ -25,9 +25,11 @@ if (CMAKE_SYSTEM_NAME STREQUAL Android)
         Qt5::Positioning
         Qt5::AndroidExtras
         Qt5::Multimedia
-        Qt5::WebEngineWidgets
-        Qt5::WebEngine
     )
+
+    if (TARGET Qt5::WebEngineWidgets)
+        target_link_libraries(${TARGET} Qt5::WebEngineWidgets Qt5::WebEngine)
+    endif()
 else()
     set(TARGET marble-behaim)
     add_executable (${TARGET} ${marble_SRCS} ${marble_QRCS})
