Update the MIME type for GeoJSON files to be RFC7946-compliant.
Differential Revision: https://phabricator.kde.org/D23529

--- a/src/plugins/runner/json/marble_geojson.desktop
+++ b/src/plugins/runner/json/marble_geojson.desktop
@@ -96,7 +96,7 @@ GenericName[uk]=Віртуальний глобус
 GenericName[x-test]=xxVirtual Globexx
 GenericName[zh_CN]=虚拟地球仪
 GenericName[zh_TW]=虛擬地球儀
-MimeType=application/vnd.geo+json;
+MimeType=application/geo+json;
 Icon=marble
 Terminal=false
 Categories=Qt;KDE;Education;Geography;
