--- a/src/plugins/runner/json/marble_part_geojson.desktop
+++ b/src/plugins/runner/json/marble_part_geojson.desktop
@@ -53,7 +53,7 @@ Name[uk]=Компонент Marble
 Name[x-test]=xxMarble Partxx
 Name[zh_CN]=Marble 组件
 Name[zh_TW]=Marble 部件
-MimeType=application/vnd.geo+json;
+MimeType=application/geo+json;
 X-KDE-ServiceTypes=Browser/View,KParts/ReadOnlyPart
 X-KDE-Library=libmarble_part
 Icon=marble
