Add the svgs/solid/dot-circle.svg icon from FontAwesome
FontAwesome icons are licensed under CC BY 4.0 and are
available from https://github.com/FortAwesome/Font-Awesome.git

The svgs/solid/dot-circle.svg from repository tag 5.10.2
(commit 090e6148d3f63a45b40e7cd8679bd4d64e58d75d) was used for this commit.

Differential Revision: https://phabricator.kde.org/D23532

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -60,6 +60,7 @@ svg/moon.png
 svg/glow.png
 svg/track_turtle.svg
 svg/bookmark.svg
+svg/dot-circle-regular.svg
 DESTINATION ${MARBLE_DATA_INSTALL_PATH}/svg)
 
 FILE (GLOB SVG_FILES flags/*.svg)
