--- a/src/apps/marble-maps/package/AndroidManifest.xml
+++ b/src/apps/marble-maps/package/AndroidManifest.xml
@@ -19,7 +19,7 @@
                                 <data android:scheme="file" android:host="*" android:mimeType="*/*" android:pathPattern=".*\\.osm"/>
                                 <data android:scheme="file" android:host="*" android:mimeType="*/*" android:pathPattern=".*\\.geojson"/>
                         </intent-filter>
-                        <meta-data android:name="android.app.lib_name" android:value="Marble"/>
+                        <meta-data android:name="android.app.lib_name" android:value="marble-maps"/>
                         <meta-data android:name="android.app.qt_sources_resource_id" android:resource="@array/qt_sources"/>
                         <meta-data android:name="android.app.repository" android:value="default"/>
                         <meta-data android:name="android.app.qt_libs_resource_id" android:resource="@array/qt_libs"/>
