Use URLs with transport encryption

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -354,7 +354,7 @@ marble_install_po_files_as_qm(poqm)
 # As a temporary hack (your task to improve it, dear reader :) ) the macros
 # are called only from src/apps/marble-kde/CMakeLists.txt.
 # That should catch 99.9 % cases of builds from released tarball, where all the
-# KF5-dependant apps and plugins will be built and installed together.
+# KF5-dependent apps and plugins will be built and installed together.
 # Currently these are:
 # src/apps/marble-kde
 # src/plasmarunner
