--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,7 +43,7 @@ endif()
 
 macro_optional_find_package(ZLIB QUIET)
 marble_set_package_properties(ZLIB PROPERTIES DESCRIPTION "general-purpose lossless data-compression library")
-marble_set_package_properties(ZLIB PROPERTIES URL "http://www.zlib.net/")
+marble_set_package_properties(ZLIB PROPERTIES URL "https://www.zlib.net/")
 marble_set_package_properties(ZLIB PROPERTIES TYPE OPTIONAL PURPOSE "When found, system zlib is used. When not found, a Marble internal zlib is used.")
 if(NOT ZLIB_FOUND)
   add_subdirectory( 3rdparty/zlib )
