Remove absolute path from INCLUDE_INSTALL_DIR
The absolute path in INCLUDE_INSTALL_DIR eventually made it into the exported
MarbleTargets.cmake file in the INTERFACE_INCLUDE_DIRECTORIES target property.

There should be _no_ absolute paths in any outputs of install.

This bug causes the following use-case to fail:
- Make Install marble
- Move/deploy install directory to another location (e.g. deploy from Continuous Integration server)
- Link to Marble from new cmake project with find_package(Marble)

Because of this absolute path, the install directory cannot be moved after it is created.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -216,7 +216,7 @@ if(NOT APPS_INSTALL_DIR)
 endif(NOT APPS_INSTALL_DIR)
 
 if(NOT INCLUDE_INSTALL_DIR)
-    set(INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/include")
+    set(INCLUDE_INSTALL_DIR "include")
 endif()
 
 if (NOT MARBLE_DATA_PATH)
