MSVC requires that the Marble library link directly to Qt5::Core.
Ref T12071

--- a/src/lib/marble/CMakeLists.txt
+++ b/src/lib/marble/CMakeLists.txt
@@ -387,6 +387,7 @@ target_link_libraries(marblewidget
         Qt5::Widgets
         Qt5::Network
     LINK_PRIVATE
+        Qt5::Core
         Qt5::Svg
         Qt5::PrintSupport
         Qt5::Concurrent
