Add missing Qt5WebChannel dependency
QWebChannel header is used in src/lib/marble/MarbleLegendBrowser.cpp
since commit b42ee5c8 but apparently not always implicitly included.

Downstream report: https://bugs.gentoo.org/728234

Signed-off-by: Andreas Sturmlechner <asturm@gentoo.org>

--- a/src/lib/marble/CMakeLists.txt
+++ b/src/lib/marble/CMakeLists.txt
@@ -395,6 +395,7 @@ target_link_libraries(marblewidget
 if (NOT MARBLE_NO_WEBKITWIDGETS)
     target_link_libraries(marblewidget
         LINK_PUBLIC
+            Qt5::WebChannel
             Qt5::WebEngineWidgets
             Qt5::WebEngine
     )
