Add receiving side of the Tirex backend interface
This implements enough infrastructure to receive render requests coming
in via Tirex and mod_tile. We can only answer by an error message so far
though.

--- a/tools/vectorosm-tilecreator/CMakeLists.txt
+++ b/tools/vectorosm-tilecreator/CMakeLists.txt
@@ -43,3 +43,10 @@ add_executable(marble-vectorosm-process-land-polygons
     vectorosm-process-land-polygons.cpp
 )
 target_link_libraries(marble-vectorosm-process-land-polygons vectorosm-toolchain)
+
+add_executable(marble-vectorosm-tirex-backend
+    vectorosm-tirex-backend.cpp
+    tirexbackend.cpp
+    tirexmetatile.cpp
+)
+target_link_libraries(marble-vectorosm-tirex-backend vectorosm-toolchain)
