Add support for loading OSM PBF files
This enables the tile generator to consume osmx output directly, without
having to convert that to o5m first.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,9 @@ endif()
 #######################################################
 # Find Qt dependencies
 
+find_package(Protobuf)
+set_package_properties(Protobuf PROPERTIES TYPE OPTIONAL PURPOSE "Parsing of OSM PBF files.")
+
 if(CMAKE_SYSTEM_NAME STREQUAL Android)
     set(REQUIRED_QT_VERSION 5.7.0)
    # TODO: still needed with ECM toolchain?
