Add dedicated tool for generating the landmass input tiles
So far this was done as part of the z >= 11 tile generation in
marble-vectorosm-tilecreator. For a Tirex-based on-demand generation
we need to do this separately ahead of time  though.

--- a/tools/vectorosm-tilecreator/CMakeLists.txt
+++ b/tools/vectorosm-tilecreator/CMakeLists.txt
@@ -38,3 +38,8 @@ target_link_libraries(marble-vectorosm-tilecreator ${TARGET})
 
 add_executable(marble-vectorosm-cachetiles vectorosm-cachetiles.cpp)
 target_link_libraries(marble-vectorosm-cachetiles ${TARGET})
+
+add_executable(marble-vectorosm-process-land-polygons
+    vectorosm-process-land-polygons.cpp
+)
+target_link_libraries(marble-vectorosm-process-land-polygons vectorosm-toolchain)
