Fix Windows build. QT_STRICT_ITERATORS do not work on vs compilers. Missing ZLib includes for osm runner plugin.

--- a/src/apps/marble-qt/CMakeLists.txt
+++ b/src/apps/marble-qt/CMakeLists.txt
@@ -48,7 +48,7 @@ if(STATIC_BUILD)
 endif(STATIC_BUILD)
 
 if(WIN32)
-install (TARGETS marble-qt RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
+install (TARGETS marble-qt RUNTIME DESTINATION .)
 else(WIN32)
 if (APPLE)
   # No need for this when installing to a bundle
@@ -56,6 +56,7 @@ else (APPLE)
     install (TARGETS marble-qt RUNTIME DESTINATION bin )
 endif (APPLE)
 endif(WIN32)
+
 if(APPS_INSTALL_DIR)
   install(PROGRAMS org.kde.marble-qt.desktop DESTINATION ${APPS_INSTALL_DIR})
 endif(APPS_INSTALL_DIR)
