Fix Windows build. QT_STRICT_ITERATORS do not work on vs compilers. Missing ZLib includes for osm runner plugin.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,11 +209,11 @@ else() # Linux / bsd etc...
 endif()
 
 if(NOT ICON_INSTALL_DIR)
-	set(ICON_INSTALL_DIR ${CMAKE_INSTALL_FULL_DATAROOTDIR}/icons)
+	set(ICON_INSTALL_DIR share/icons)
 endif(NOT ICON_INSTALL_DIR)
 
 if(NOT APPS_INSTALL_DIR)
-	set(APPS_INSTALL_DIR ${CMAKE_INSTALL_FULL_DATAROOTDIR}/applications)
+	set(APPS_INSTALL_DIR share/applications)
 endif(NOT APPS_INSTALL_DIR)
 
 if(NOT INCLUDE_INSTALL_DIR)
@@ -248,10 +248,15 @@ add_definitions(
     -DQT_NO_URL_CAST_FROM_STRING
     -DQT_NO_CAST_TO_ASCII
     -DQT_NO_CAST_FROM_BYTEARRAY
-    -DQT_STRICT_ITERATORS
     -DQT_DISABLE_DEPRECATED_BEFORE=0x050700
 )
 
+if (NOT WIN32)
+    # Strict iterators can't be used on Windows, they lead to a link error
+    # when application code iterates over a QVector<QPoint> for instance
+    # See example at https://bugreports.qt.io/browse/QTBUG-78112
+    add_definitions(-DQT_STRICT_ITERATORS)
+endif()
 ####################################################
 # Options for static build
 if(STATIC_BUILD)
