--- a/src/plugins/runner/osm/CMakeLists.txt
+++ b/src/plugins/runner/osm/CMakeLists.txt
@@ -6,6 +6,7 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}/writers
  ${CMAKE_CURRENT_SOURCE_DIR}/translators
  ${CMAKE_CURRENT_BINARY_DIR}
+ ${ZLIB_INCLUDE_DIRS}
 )
 
 set( osm_writers_SRCS
