Actually make the Qt5Positioning dependency optional
The surrounding code handles this just fine, just the checking code didn't.

--- a/src/lib/marble/declarative/CMakeLists.txt
+++ b/src/lib/marble/declarative/CMakeLists.txt
@@ -1,6 +1,6 @@
 PROJECT( MarbleDeclarativePlugin )
 
-find_package(Qt5 ${REQUIRED_QT_VERSION} COMPONENTS Positioning)
+find_package(Qt5 ${REQUIRED_QT_VERSION} OPTIONAL_COMPONENTS Positioning)
 if(Qt5Positioning_FOUND)
     add_definitions(-DHAVE_QT5_POSITIONING)
 endif(Qt5Positioning_FOUND)
