Add configuration for the the vectorosm/dev tileset
This matches what's currently on maps.kde.org.

--- a/tools/vectorosm-tilecreator/setup/etc/apache2/mod_tile_integration.conf
+++ b/tools/vectorosm-tilecreator/setup/etc/apache2/mod_tile_integration.conf
@@ -14,4 +14,5 @@ Alias "/earth" "/data2/k/osm/htdocs/earth"
 # and delivered differently.
 
 RewriteEngine on
-RewriteRule ^(.*/\d\d/\d+/\d+)\.o5m$ /tirex$1.ofm [PT]
+RewriteRule ^(.*/vectorosm/v1/\d\d/\d+/\d+)\.o5m$ /tirex$1.ofm [PT]
+RewriteRule ^(.*/vectorosm/dev/\d\d/\d+/\d+)\.o5m$ /tirex$1.ofm [PT]
