--- a/tools/vectorosm-tilecreator/setup/etc/tirex/renderer/marble-dev/marble-dev.conf
+++ b/tools/vectorosm-tilecreator/setup/etc/tirex/renderer/marble-dev/marble-dev.conf
@@ -1,16 +1,14 @@
 #-----------------------------------------------------------------------------
 #
-#  Configuration for Marble vector tile generator.
-#
-#  /etc/tirex/renderer/marble/marble.conf
+#  Configuration for Marble vector tile generator - development version
 #
 #-----------------------------------------------------------------------------
 
 #  symbolic name of this map
-name=vectorosm/v1
+name=vectorosm/dev
 
 #  tile directory
-tiledir=/k/osm/tirex/tiles/vectorosm/v1/
+tiledir=/k/osm/tirex/tiles/vectorosm/dev/
 
 #  cache directory with the input data for the generator
 cache-directory=/k/osm/cache
@@ -20,3 +18,4 @@ minz=11
 
 #  maximum zoom level allowed
 maxz=17
+
