Work around CMake Protobuf support not dealing with missing protoc
The check in there fails if the protobuf headers are found, but protoc is
missing and pretends protobuf is functional nevertheless. Additionally
some Debian variants are splitting those two parts in different packages
without adding a dependency between them. So on those systems we can end
up with build errors due to such a partial setup without CMake catching
this.

--- a/src/plugins/runner/osm/CMakeLists.txt
+++ b/src/plugins/runner/osm/CMakeLists.txt
@@ -10,7 +10,7 @@ INCLUDE_DIRECTORIES(
  ${ZLIB_INCLUDE_DIRS}
 )
 
-if (Protobuf_FOUND)
+if (Protobuf_FOUND AND Protobuf_PROTOC_EXECUTABLE)
     PROTOBUF_GENERATE_CPP(pbf_srcs pbf_hdrs
         ${CMAKE_SOURCE_DIR}/tools/osm-addresses/pbf/fileformat.proto
         ${CMAKE_SOURCE_DIR}/tools/osm-addresses/pbf/osmformat.proto
