attempt to add coverage in Jenkins CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -318,6 +318,7 @@ if(ECM_FOUND)
   include(KDECMakeSettings)
   include(ECMInstallIcons)
   include(ECMEnableSanitizers)
+  include(ECMCoverageOption)
 endif()
 
 ####################################################
