install FileManager.h too

--- a/src/lib/marble/CMakeLists.txt
+++ b/src/lib/marble/CMakeLists.txt
@@ -487,6 +487,7 @@ install( FILES
     BookmarkManager.h
     DownloadRegion.h
     DownloadRegionDialog.h
+    FileManager.h
     LatLonBoxWidget.h
     MarbleWidget.h
     MarbleMap.h
